build/log/idf_py_stderr_output_34095
In file included from /Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:11:
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:198:8: error: 'lv_disp_draw_buf_t' does not name a type; did you mean 'lv_draw_buf_t'?
  198 | static lv_disp_draw_buf_t draw_buf;
      |        ^~~~~~~~~~~~~~~~~~
      |        lv_draw_buf_t
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:202:6: error: variable or field 'display_flush' declared void
  202 | void display_flush(lv_disp_drv_t *disp, const lv_area_t *area, lv_color_t *color_p);
      |      ^~~~~~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:202:20: error: 'lv_disp_drv_t' was not declared in this scope; did you mean 'lv_fs_drv_t'?
  202 | void display_flush(lv_disp_drv_t *disp, const lv_area_t *area, lv_color_t *color_p);
      |                    ^~~~~~~~~~~~~
      |                    lv_fs_drv_t
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:202:35: error: 'disp' was not declared in this scope
  202 | void display_flush(lv_disp_drv_t *disp, const lv_area_t *area, lv_color_t *color_p);
      |                                   ^~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:202:41: error: expected primary-expression before 'const'
  202 | void display_flush(lv_disp_drv_t *disp, const lv_area_t *area, lv_color_t *color_p);
      |                                         ^~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:202:75: error: expected primary-expression before '*' token
  202 | void display_flush(lv_disp_drv_t *disp, const lv_area_t *area, lv_color_t *color_p);
      |                                                                           ^
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:202:76: error: 'color_p' was not declared in this scope
  202 | void display_flush(lv_disp_drv_t *disp, const lv_area_t *area, lv_color_t *color_p);
      |                                                                            ^~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:203:6: error: variable or field 'touchpad_read' declared void
  203 | void touchpad_read(lv_indev_drv_t *indev_driver, lv_indev_data_t *data);
      |      ^~~~~~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:203:20: error: 'lv_indev_drv_t' was not declared in this scope; did you mean 'lv_indev_data_t'?
  203 | void touchpad_read(lv_indev_drv_t *indev_driver, lv_indev_data_t *data);
      |                    ^~~~~~~~~~~~~~
      |                    lv_indev_data_t
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:203:36: error: 'indev_driver' was not declared in this scope
  203 | void touchpad_read(lv_indev_drv_t *indev_driver, lv_indev_data_t *data);
      |                                    ^~~~~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:203:66: error: expected primary-expression before '*' token
  203 | void touchpad_read(lv_indev_drv_t *indev_driver, lv_indev_data_t *data);
      |                                                                  ^
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:203:67: error: 'data' was not declared in this scope
  203 | void touchpad_read(lv_indev_drv_t *indev_driver, lv_indev_data_t *data);
      |                                                                   ^~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/ESP32-3248S035.h:203:67: note: suggested alternatives:
In file included from /Users/macbookair/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/string:53,
                 from /Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:3:
/Users/macbookair/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/range_access.h:346:5: note:   'std::data'
  346 |     data(initializer_list<_Tp> __il) noexcept
      |     ^~~~
In file included from /Users/macbookair/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/string_view:48,
                 from /Users/macbookair/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/basic_string.h:47,
                 from /Users/macbookair/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/string:54:
/Users/macbookair/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/ranges_base.h:496:43: note:   'std::ranges::__cust::data'
  496 |     inline constexpr __cust_access::_Data data{};
      |                                           ^~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp: In function 'void app_main()':
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:25:32: error: 'draw_buf' was not declared in this scope
   25 |         lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 10);
      |                                ^~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:25:9: error: 'lv_disp_draw_buf_init' was not declared in this scope; did you mean 'lv_draw_buf_init'?
   25 |         lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 10);
      |         ^~~~~~~~~~~~~~~~~~~~~
      |         lv_draw_buf_init
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:28:16: error: 'lv_disp_drv_t' does not name a type; did you mean 'lv_fs_drv_t'?
   28 |         static lv_disp_drv_t disp_drv;
      |                ^~~~~~~~~~~~~
      |                lv_fs_drv_t
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:29:27: error: 'disp_drv' was not declared in this scope
   29 |         lv_disp_drv_init(&disp_drv);
      |                           ^~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:29:9: error: 'lv_disp_drv_init' was not declared in this scope; did you mean 'lv_fs_drv_init'?
   29 |         lv_disp_drv_init(&disp_drv);
      |         ^~~~~~~~~~~~~~~~
      |         lv_fs_drv_init
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:32:29: error: 'display_flush' was not declared in this scope
   32 |         disp_drv.flush_cb = display_flush;
      |                             ^~~~~~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:34:9: error: 'lv_disp_drv_register' was not declared in this scope; did you mean 'lv_fs_drv_register'?
   34 |         lv_disp_drv_register(&disp_drv);
      |         ^~~~~~~~~~~~~~~~~~~~
      |         lv_fs_drv_register
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:37:16: error: 'lv_indev_drv_t' does not name a type; did you mean 'lv_indev_data_t'?
   37 |         static lv_indev_drv_t indev_drv;
      |                ^~~~~~~~~~~~~~
      |                lv_indev_data_t
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:38:28: error: 'indev_drv' was not declared in this scope
   38 |         lv_indev_drv_init(&indev_drv);
      |                            ^~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:38:9: error: 'lv_indev_drv_init' was not declared in this scope; did you mean 'lv_fs_drv_init'?
   38 |         lv_indev_drv_init(&indev_drv);
      |         ^~~~~~~~~~~~~~~~~
      |         lv_fs_drv_init
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:40:29: error: 'touchpad_read' was not declared in this scope
   40 |         indev_drv.read_cb = touchpad_read;
      |                             ^~~~~~~~~~~~~
/Users/macbookair/Documents/projects/ESP32-3248S035-LVGL-v8/main/main.cpp:41:9: error: 'lv_indev_drv_register' was not declared in this scope; did you mean 'lv_fs_drv_register'?
   41 |         lv_indev_drv_register(&indev_drv);
      |         ^~~~~~~~~~~~~~~~~~~~~
      |         lv_fs_drv_register
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
